<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.ss</groupId>
    <artifactId>rbac</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>5.4.1.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>6.0.15.Final</version>
        </dependency>
        <!-- PROVIDED -->
        <!--dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-jpamodelgen</artifactId>
            <version>5.4.1.Final</version>
            <scope>provided</scope>
        </dependency-->
        <!-- TEST -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!--dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.199</version>
            <scope>test</scope>
        </dependency-->
    </dependencies>
    <build>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>**/node_modules/**</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <classpathDependencyScopeExclude>test</classpathDependencyScopeExclude>
                    <classesDirectory>path/to/none</classesDirectory>
                    <argLine>
                        --module-path target/classes:target/test-classes:${settings.localRepository}/junit/junit/4.12/junit-4.12.jar:${settings.localRepository}/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar:${settings.localRepository}/javax/persistence/javax.persistence-api/2.2/javax.persistence-api-2.2.jar:${settings.localRepository}/javax/validation/validation-api/2.0.1.Final/validation-api-2.0.1.Final.jar
                        --add-modules junit,hamcrest.core,ss.rbac,ss.rbac.test
                    </argLine>
                    <jvm>/usr/lib/jvm/jdk-11.0.1/bin/java</jvm>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <name>rbac</name>
</project>